src/libqtextdocument.bf

	[LinkName("QTextDocument_ModificationChanged")]
	public static extern void QTextDocument_ModificationChanged(void* c_this, bool m);
	[LinkName("QTextDocument_CursorPositionChanged")]
	public static extern void QTextDocument_CursorPositionChanged(void* c_this, QTextCursor cursor);
	[LinkName("QTextDocument_BlockCountChanged")]
	public static extern void QTextDocument_BlockCountChanged(void* c_this, int32 newBlockCount);
	[LinkName("QTextDocument_BaseUrlChanged")]
	public static extern void QTextDocument_BaseUrlChanged(void* c_this, QUrl url);
	[LinkName("QTextDocument_DocumentLayoutChanged")]
	public static extern void QTextDocument_DocumentLayoutChanged(void* c_this);
	[LinkName("QTextDocument_Undo2")]
	public static extern void QTextDocument_Undo2(void* c_this);
	[LinkName("QTextDocument_Redo2")]
	public static extern void QTextDocument_Redo2(void* c_this);
	[LinkName("QTextDocument_AppendUndoItem")]
	public static extern void QTextDocument_AppendUndoItem(void* c_this, QAbstractUndoItem param1);
	[LinkName("QTextDocument_SetModified")]
	public static extern void QTextDocument_SetModified(void* c_this);
	[LinkName("QTextDocument_CreateObject")]
	public static extern QTextObject QTextDocument_CreateObject(void* c_this, QTextFormat f);
	[LinkName("QTextDocument_LoadResource")]
	public static extern QVariant QTextDocument_LoadResource(void* c_this, int32 typeVal, QUrl name);
	[LinkName("QTextDocument_Tr2")]
	public static extern char8[] QTextDocument_Tr2(char8[] s, char8[] c);
	[LinkName("QTextDocument_Tr3")]
	public static extern char8[] QTextDocument_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QTextDocument_Clone1")]
	public static extern QTextDocument QTextDocument_Clone1(void* c_this, QObject parent);
	[LinkName("QTextDocument_ToMarkdown1")]
	public static extern char8[] QTextDocument_ToMarkdown1(void* c_this, int64 features);
	[LinkName("QTextDocument_SetMarkdown2")]
	public static extern void QTextDocument_SetMarkdown2(void* c_this, char8[] markdown, int64 features);
	[LinkName("QTextDocument_Find22")]
	public static extern QTextCursor QTextDocument_Find22(void* c_this, char8[] subString, int32 from);
	[LinkName("QTextDocument_Find32")]
	public static extern QTextCursor QTextDocument_Find32(void* c_this, char8[] subString, int32 from, int64 options);
	[LinkName("QTextDocument_Find33")]
	public static extern QTextCursor QTextDocument_Find33(void* c_this, char8[] subString, QTextCursor cursor, int64 options);
	[LinkName("QTextDocument_Find23")]
	public static extern QTextCursor QTextDocument_Find23(void* c_this, QRegularExpression expr, int32 from);
	[LinkName("QTextDocument_Find34")]
	public static extern QTextCursor QTextDocument_Find34(void* c_this, QRegularExpression expr, int32 from, int64 options);
	[LinkName("QTextDocument_Find35")]
	public static extern QTextCursor QTextDocument_Find35(void* c_this, QRegularExpression expr, QTextCursor cursor, int64 options);
	[LinkName("QTextDocument_DrawContents2")]
	public static extern void QTextDocument_DrawContents2(void* c_this, QPainter painter, QRectF rect);
	[LinkName("QTextDocument_ClearUndoRedoStacks1")]
	public static extern void QTextDocument_ClearUndoRedoStacks1(void* c_this, int64 historyToClear);
	[LinkName("QTextDocument_SetModified1")]
	public static extern void QTextDocument_SetModified1(void* c_this, bool m);
}